<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.razoan.currencyconverter.viewmodel.CurrencyConverterVM" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/rlUSDSection"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="@dimen/_16sdp"
            android:paddingTop="@dimen/_16sdp"
            android:paddingBottom="@dimen/_16sdp"
            android:paddingEnd="@dimen/_28sdp"
            android:background="@drawable/usdbg">

            <TextView
                android:id="@+id/tvUSDSign"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:paddingStart="@dimen/_12sdp"
                android:text="@string/usd"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvUSDAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@+id/tvUSDSign"
                android:text="@string/_0"
                android:maxLines="1"
                android:maxLength="32"
                android:textSize="@dimen/_12sdp" />

        </RelativeLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/rlOtherCurrencySection"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_16sdp"
            android:background="@drawable/usdbg"
            android:paddingTop="@dimen/_16sdp"
            android:paddingEnd="@dimen/_8sdp"
            android:paddingBottom="@dimen/_16sdp"
            app:layout_constraintBottom_toTopOf="@+id/operation_calculation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rlUSDSection">


            <ImageView
                android:id="@+id/ivDownArrow"
                android:layout_width="@dimen/_16sdp"
                android:layout_height="@dimen/_16sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_baseline_keyboard_arrow_down_24"
                android:contentDescription="@string/opencurrencydialog" />

            <TextView
                android:id="@+id/tvOtherCurrencySign"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/_12sdp"
                android:paddingEnd="@dimen/_5sdp"
                android:text="@string/bdt"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold"
                app:layout_constraintRight_toLeftOf="@+id/ivDownArrow"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/tvOtherCurrencyAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLength="32"
                android:maxLines="1"
                android:text="@string/_0"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintRight_toLeftOf="@+id/tvOtherCurrencySign"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.Group
                android:id="@+id/grpOpenDialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:constraint_referenced_ids="tvOtherCurrencySign,ivDownArrow" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/operation_calculation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:foregroundGravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.32" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/first_pad_row"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.49" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/second_pad_row"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.66" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/third_pad_row"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.83" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/first_pad_column"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.30" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/second_pad_column"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.66" />


        <TextView
            android:id="@+id/point"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/rectstroke"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:gravity="center"
            android:onClick="@{() -> viewModel.onOperatorAdd(@string/point)}"
            android:scaleType="center"
            android:text="@string/point"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_15sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/first_pad_column"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/third_pad_row" />

        <TextView
            android:id="@+id/zero"
            style="@style/PadItem.Number"
            android:fontFamily="sans-serif-light"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:onClick="@{() -> viewModel.onOperatorAdd(@string/zero)}"
            android:text="@string/zero"
            android:textSize="@dimen/_15sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/second_pad_column"
            app:layout_constraintStart_toStartOf="@id/first_pad_column"
            app:layout_constraintTop_toTopOf="@id/third_pad_row" />

        <TextView
            android:id="@+id/clear"
            style="@style/PadItem.Clear"
            android:fontFamily="sans-serif-light"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:onClick="@{()->viewModel.onClearAll()}"
            android:text="@string/clear"
            android:textSize="@dimen/_15sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/second_pad_column"
            app:layout_constraintTop_toTopOf="@id/third_pad_row"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/one"
            style="@style/PadItem.Number"
            android:fontFamily="sans-serif-light"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:onClick="@{() -> viewModel.onOperatorAdd(@string/one)}"
            android:text="@string/one"
            android:textSize="@dimen/_15sdp"
            app:layout_constraintBottom_toTopOf="@id/third_pad_row"
            app:layout_constraintEnd_toEndOf="@id/first_pad_column"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/second_pad_row" />

        <TextView
            android:id="@+id/two"
            style="@style/PadItem.Number"
            android:fontFamily="sans-serif-light"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:onClick="@{() -> viewModel.onOperatorAdd(@string/two)}"
            android:text="@string/two"
            android:textSize="@dimen/_15sdp"
            app:layout_constraintBottom_toTopOf="@id/third_pad_row"
            app:layout_constraintEnd_toEndOf="@id/second_pad_column"
            app:layout_constraintStart_toStartOf="@id/first_pad_column"
            app:layout_constraintTop_toTopOf="@id/second_pad_row" />

        <TextView
            android:id="@+id/three"
            style="@style/PadItem.Number"
            android:fontFamily="sans-serif-light"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:onClick="@{() -> viewModel.onOperatorAdd(@string/three)}"
            android:text="@string/three"
            android:textSize="@dimen/_15sdp"
            app:layout_constraintBottom_toTopOf="@id/third_pad_row"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/second_pad_column"
            app:layout_constraintTop_toTopOf="@id/second_pad_row" />

        <TextView
            android:id="@+id/four"
            style="@style/PadItem.Number"
            android:fontFamily="sans-serif-light"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:onClick="@{() -> viewModel.onOperatorAdd(@string/four)}"
            android:text="@string/four"
            android:textSize="@dimen/_15sdp"
            app:layout_constraintBottom_toTopOf="@id/second_pad_row"
            app:layout_constraintEnd_toEndOf="@id/first_pad_column"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/first_pad_row" />

        <TextView
            android:id="@+id/five"
            style="@style/PadItem.Number"
            android:fontFamily="sans-serif-light"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:onClick="@{() -> viewModel.onOperatorAdd(@string/five)}"
            android:text="@string/five"
            android:textSize="@dimen/_15sdp"
            app:layout_constraintBottom_toTopOf="@id/second_pad_row"
            app:layout_constraintEnd_toEndOf="@id/second_pad_column"
            app:layout_constraintStart_toStartOf="@id/first_pad_column"
            app:layout_constraintTop_toTopOf="@id/first_pad_row" />

        <TextView
            android:id="@+id/six"
            style="@style/PadItem.Number"
            android:fontFamily="sans-serif-light"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:onClick="@{() -> viewModel.onOperatorAdd(@string/six)}"
            android:text="@string/six"
            android:textSize="@dimen/_15sdp"
            app:layout_constraintBottom_toTopOf="@id/second_pad_row"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/second_pad_column"
            app:layout_constraintTop_toTopOf="@id/first_pad_row" />

        <TextView
            android:id="@+id/seven"
            style="@style/PadItem.Number"
            android:fontFamily="sans-serif-light"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:onClick="@{() -> viewModel.onOperatorAdd(@string/seven)}"
            android:text="@string/seven"
            android:textSize="@dimen/_15sdp"
            app:layout_constraintBottom_toTopOf="@id/first_pad_row"
            app:layout_constraintEnd_toEndOf="@id/first_pad_column"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/operation_calculation" />

        <TextView
            android:id="@+id/eight"
            style="@style/PadItem.Number"
            android:fontFamily="sans-serif-light"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:onClick="@{() -> viewModel.onOperatorAdd(@string/eight)}"
            android:text="@string/eight"
            android:textSize="@dimen/_15sdp"
            app:layout_constraintBottom_toTopOf="@id/first_pad_row"
            app:layout_constraintEnd_toEndOf="@id/second_pad_column"
            app:layout_constraintStart_toStartOf="@id/first_pad_column"
            app:layout_constraintTop_toTopOf="@id/operation_calculation" />

        <TextView
            android:id="@+id/nine"
            style="@style/PadItem.Number"
            android:fontFamily="sans-serif-light"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:onClick="@{() -> viewModel.onOperatorAdd(@string/nine)}"
            android:text="@string/nine"
            android:textSize="@dimen/_15sdp"
            app:layout_constraintBottom_toTopOf="@id/first_pad_row"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/second_pad_column"
            app:layout_constraintTop_toTopOf="@id/operation_calculation" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>